--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,10 @@
 {
+
+  "ConnectionStrings":{
+
+    "Default" : "server=.\\Rodion; database=vega; Integrated Security=SSPI"
+ 
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
